# Cargo.toml
[package]
name = "isp-docs"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
futures = "0.3"
html2md = "0.2.14"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json", "blocking", "rustls-tls"] }
select = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.5.1"
slug = "0.1.5"
tokio = { version = "1", features = ["full"] }







